--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "hackbrown",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "emotion": "^10.0.27",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
-  },
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "run-p start:*",
+    "build": "run-p build:*",
+    "start:frontend": "yarn workspace frontend start",
+    "start:backend": "yarn workspace backend start",
+    "build:frontend": "yarn workspace frontend run build",
+    "build:backend": "yarn workspace backend run build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "workspaces": [
+    "frontend",
+    "backend"
+  ]
 }
