--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "emotion": "^10.0.27",
     "react": "^16.12.0",
+    "react-browser-notifications": "^1.0.14",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "ws": "^7.2.1"
